Fixed embed sidebar visibility on tablet size

--- a/CampusMap2010/Content/src/scss/centrals.scss
+++ b/CampusMap2010/Content/src/scss/centrals.scss
@@ -16,9 +16,12 @@ $fontURL: "https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0";
 	font-weight:normal;
 	font-style:normal
 }
- #campusmap.embedded {
-	#spine, #header_bar { display:none;}
-    main { margin-top:0px; }
+
+@media only screen and (max-width: 990px) {
+     #campusmap.embedded {
+	    #spine, #header_bar { display:none;}
+        main { margin-top:0px; }
+    }
 }
 #campusmap{ //the NS should be a var.. 
 	&{
